# mstodo-for-linux

./: .gitignore  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  quickadd.html  vite.config.ts
.github/workflows/: build.yml
flatpak/: cargo-sources.json  io.github.alexjfinch.mstodo-for-linux.desktop  io.github.alexjfinch.mstodo-for-linux.yml  node-sources.json
src/: App.css  App.tsx  global.d.ts  main.tsx  quickadd-base.css  quickadd.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/metainfo/: io.github.alexjfinch.mstodo-for-linux.metainfo.xml
src-tauri/src/: auth.rs  main.rs
src/api/: graph.ts  importExport.test.ts  importExport.ts  sqlite.ts  taskStorage.ts
src/components/: ComponentBoundary.tsx  ConfirmDialog.css  ConfirmDialog.tsx  CustomSelect.css  CustomSelect.tsx  ErrorBoundary.tsx  ListBanner.css  ListBanner.tsx  MyDaySuggestions.css  MyDaySuggestions.tsx  NewTaskInput.css  NewTaskInput.tsx  PlannedView.tsx  QuickAdd.tsx  SearchBar.css  SearchBar.tsx  Settings.css  Settings.tsx  Sidebar.css  Sidebar.tsx  SignIn.css  SignIn.tsx  TaskContextMenu.tsx  TaskDetail.css  TaskDetail.tsx  TaskItem.css  TaskItem.tsx  TaskList.css  TaskList.tsx  Titlebar.css  Titlebar.tsx  ToastContainer.css  ToastContainer.tsx
src/hooks/: useAuth.ts  useDatabase.ts  useFilteredTasks.ts  useImportExport.ts  useLists.ts  useReminders.ts  useSelection.ts  useSettings.ts  useTaskContextMenu.ts  useTasks.ts  useTraySync.ts
src/services/: logger.ts  networkMonitor.ts
src/styles/: global.css  theme.css
(+3 files in other folders)
