[package]
name = "mstodo-for-linux"
version = "0.1.10"
description = "An Unofficial Microsoft ToDo Client for Linux"
authors = ["Alex Finch"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2.4"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oauth2 = "4"
base64 = "0.22"
open = "5"
tiny_http = "0.12"
url = "2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tauri-plugin-notification = "2.3.3"
keyring = { version = "3", features = ["linux-native-sync-persistent", "crypto-rust"] }
chrono = "0.4"
dirs = "6"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "4", default-features = false, features = ["tokio"] }
futures-util = "0.3"
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
